--- a/wiki/Tables.wiki
+++ b/wiki/Tables.wiki
@@ -1,6 +1,15 @@
+==As discussed on Thursday. Below is our database schema==
+|| TableName || Fields ||
+|| IP_WEDDING || *WID* , GROOM , BRIDE , TABLENO , WDATE ||
+|| IP_GUESTLIST || *GID* , _WID_ , GNAME , GTYPE , INVITEDBY , STATUS , TID , NUMGRP , NUMVEG , NUMMUS ||
+|| IP_TABLE || *WID* , *TID* ||
+
+
+
 #summary Database table
 
 For table,
 
   Three tables are confirmed.
   To change the “Table” table name to something meaningful.. 
+
