--- a/wiki/ImportFileFormat.wiki
+++ b/wiki/ImportFileFormat.wiki
@@ -1,13 +1,11 @@
-#summary One-sentence summary of this page.
+FileFormat
 
 = Introduction =
 
-Add your content here.
+File Format
 
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Format of the Import CSV File:
+name,allocated,category,invitedBy,status
