Edited wiki page through web user interface.

--- a/wiki/ImportFileFormat.wiki
+++ b/wiki/ImportFileFormat.wiki
@@ -6,4 +6,4 @@ File Format
 
 = Details =
 Format of the Import CSV File:
-name,allocated,category,invitedBy,status
+name,allocated,category,invitedBy,guestTotal,guestVeg,guestMus
