Edited wiki page through web user interface.

--- a/wiki/ImportFileFormat.wiki
+++ b/wiki/ImportFileFormat.wiki
@@ -5,5 +5,11 @@ File Format
 
 
 = Details =
-Format of the Import CSV File:
-name,allocated,category,invitedBy,guestTotal,guestVeg,guestMus
+Sample Format
+name,category,invitedBy,guestTotal,guestVeg,guestMus
+
+Sample Data
+Jeremy,relative,groom,0,0,1
+Waku,relative,bride,4,0,0
+Shilei,colleague,groom,2,1,1
+Yuku,friend,bride,3,1,2
